# praktikum_dsplus_master

./: .gitignore  README.md  pyproject.toml
data/: my_submission.csv
notebooks/: ml_pipe.py  ml_utils.py  notebook.ipynb
