[tool.poetry]
name = "praktikum_dsplus_master"
version = "0.1.0"
description = ""
authors = ["konstantin <konstantin.dudersky@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "1.0.0"
kaleido = "0.2.1"
matplotlib = "3.5.1"
numba = "0.55.1"
pandas = "1.4.0"
plotly = "5.5.0"
shap = "0.40.0"
scikit-learn = "1.0.2"
scipy = "1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
